# rust-scratch

./: .gitignore  LICENSE-APACHE  README.md
bitmasks/: Cargo.toml  Justfile  README.md
bitmasks/src/: ex_1_basics.rs  ex_1_bitmask_basics.rs  lib.rs
essential_rust/: Cargo.toml
essential_rust/src/: drafts.rs  lib.rs
essential_rust/src/domain/value_types/: uid.rs
essential_rust/src/language_foundations/: subtyping_variance.rs  subtyping_variance_felix_klock.rs  subtyping_variance_jon_gjengset.rs
essential_rust/src/language_foundations/type_conversions/: uid.rs
fixed_precision_calculations/: Cargo.toml  Justfile
fixed_precision_calculations/src/: draft_1.rs  draft_2.rs  ex_1.rs  ex_1_part_1.rs  ex_1_part_2.rs  ex_2.rs  ex_3.rs  lib.rs  precision_loss_1.rs  semantic_types_1.rs
fixed_precision_calculations/src/domain/value_type/: amount.rs
fixed_precision_calculations/src/ex_2/: amount.rs
fixed_precision_calculations/src/utility/generate_data/: generate_monetary_values.rs
