[package]
name = "fixed_precision_calculations"
version = "0.1.0"
edition = "2024"

[dependencies]
fastnum = { version = "0.2.10", features = ["serde"] }
fake = { version = "4.3.0", features = ["derive"] }
rand = "0.9.1"
once_cell = "1.21.3"
thiserror = "2.0.11"
anyhow = { version = "1.0.93", default-features = false }


[dev-dependencies]
rstest = { version = "0.25.0", features = [] }
